--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
-     "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5"
   }
 }
